Quorum3/Library/Tests/Expressions/Pass/GetMaxNumberValue.quorum
class Main
    action Main
        Number size 
        number infinity = size:GetMaximumValue()
        output infinity
    end
end