Quorum3/Library/Tests/Expressions/Fail/InvalidFieldName2.quorum
class Main
    action Main
        A object
        object:field = undefined
    end
end